--- a/src/app/src/main/res/values-ta/strings.xml
+++ b/src/app/src/main/res/values-ta/strings.xml
@@ -1,25 +1,25 @@
 <resources>
     <string name="app_name" translatable="false">Katana</string>
-    <string name="desc_toolbar">C மற்றும் Kotlin-ல எழுதப்பட்ட Re-Malwack காக ஒரு app.</string>
-    <string name="daemonTogglebtn">Katamari Enable பண்ணு</string>
-    <string name="enterapppackagetorm">Remove பண்ண Package name Enter பண்ணுங்க</string>
-    <string name="enterapppackagetoadd">Add பண்ண Package name Enter பண்ணுங்க</string>
+    <string name="desc_toolbar">Re-Malwack க்காக C மற்றும் Kotlin-ல் எழுதப்பட்ட ஒரு app.</string>
+    <string name="daemonTogglebtn">Katamari ஐ Enable செய்யவும்</string>
+    <string name="enterapppackagetorm">Remove செய்ய Package name ஐ Enter செய்யவும்</string>
+    <string name="enterapppackagetoadd">Add செய்ய Package name ஐ Enter செய்யவும்</string>
     <string name="import_btn">Import</string>
     <string name="export_btn">Export</string>
-    <string name="failedtogetroot">Root permission கிடைக்கல ❌</string>
-    <string name="modulenotfound">Re-Malwack Module கிடைக்கவில்லை, தயவுசெய்து அதை Install செய்து மீண்டும் முயற்சிக்கவும் ❌</string>
-    <string name="closetheapp">App-ஐ Close பண்ணுங்க</string>
-    <string name="successstartingkatamari">Katamari service Start ஆயிடுச்சு ✅</string>
-    <string name="failureinstartingkatamari">Katamari service Start ஆகல, மீண்டும் Try பண்ணுங்க ❌</string>
-    <string name="stoppedkatamarisuccessfully">Katamari service Stop ஆயிடுச்சு ✅</string>
-    <string name="failedtostopkatamariservice">Katamari service Stop ஆகல, மீண்டும் Try பண்ணுங்க ❌</string>
-    <string name="importpkglists">Package lists Import பண்ணுறேன்..</string>
-    <string name="failedtoremovetempfile">Appdata-ல இருந்த Temp file Remove ஆகல ❌</string>
-    <string name="failedtocc2tempfile">Temp file-க்கு Copy பண்ண முடியல ❌</string>
-    <string name="importfilenotfound">/sdcard-ல Import file கிடைக்கல! “katana.pkg”னு பெயர் வச்சு அங்கே வைங்க</string>
-    <string name="successfullyimportpkglists">Package lists Import ஆயிடுச்சு ✅</string>
-    <string name="failedtoimportpkglists">Package lists Import ஆகல ❌</string>
-    <string name="exportpkglists">Package lists Export பண்ணுறேன்..</string>
-    <string name="successfullyexportpkglists">Package lists Export ஆயிடுச்சு ✅</string>
-    <string name="failedexportpkglists">Package lists Export ஆகல ❌</string>
+    <string name="failedtogetroot">Root permission கிடைக்கவில்லை.</string>
+    <string name="modulenotfound">உங்கள் device-இல் Re-Malwack module இல்லை. தயவுசெய்து அதை install செய்து மீண்டும் முயற்சிக்கவும்.</string>
+    <string name="closetheapp">App-ஐ Close செய்யவும்</string>
+    <string name="successstartingkatamari">Katamari service வெற்றிகரமாக Start ஆனது.</string>
+    <string name="failureinstartingkatamari">Katamari service Start செய்ய தோல்வி. தயவுசெய்து மீண்டும் முயற்சிக்கவும்.</string>
+    <string name="stoppedkatamarisuccessfully">Katamari service வெற்றிகரமாக Stop ஆனது.</string>
+    <string name="failedtostopkatamariservice">Katamari service Stop செய்ய தோல்வி. தயவுசெய்து மீண்டும் முயற்சிக்கவும்.</string>
+    <string name="importpkglists">Package lists Import செய்யப்படுகிறது..</string>
+    <string name="failedtoremovetempfile">Appdata-இல் உள்ள temporary file ஐ நீக்க முடியவில்லை.</string>
+    <string name="failedtocc2tempfile">Temporary file-க்கு content copy செய்ய முடியவில்லை.</string>
+    <string name="importfilenotfound">/sdcard-இல் Import file கிடைக்கவில்லை! அதை “katana.pkg” என பெயரிட்டு அங்கு வைக்கவும்.</string>
+    <string name="successfullyimportpkglists">Package lists வெற்றிகரமாக Import ஆனது.</string>
+    <string name="failedtoimportpkglists">Package lists Import செய்ய தோல்வி.</string>
+    <string name="exportpkglists">Package lists Export செய்யப்படுகிறது..</string>
+    <string name="successfullyexportpkglists">Package lists வெற்றிகரமாக Export ஆனது.</string>
+    <string name="failedexportpkglists">Package lists Export செய்ய தோல்வி.</string>
 </resources>
